# lean-ai

./: .gitignore  CLAUDE.md  Improved_processing_leverage.md  README.md
backend/: pyproject.toml
backend/src/lean_ai/: __init__.py  config.py  db.py  main.py  router.py
backend/src/lean_ai/context/: __init__.py  constants.py  content.py  deprecations.py  generation.py  metadata.py
backend/src/lean_ai/indexer/: __init__.py  chunker.py  embeddings.py  indexer.py  manifest.py  tree.py
backend/src/lean_ai/knowledge/: __init__.py  chunker.py  indexer.py
backend/src/lean_ai/knowledge/readers/: __init__.py  base.py  docx.py  epub.py  html.py  markdown.py  pdf.py  registry.py  text.py
backend/src/lean_ai/languages/: __init__.py  c.yaml  cpp.yaml  csharp.yaml  css.yaml  definitions.py  extractor.py  go.yaml  html.yaml  java.yaml  javascript.yaml  php.yaml  python.yaml  registry.py  ruby.yaml  rust.yaml  typescript.yaml
backend/src/lean_ai/llm/: __init__.py  client.py  plan_schema.py  planner.py  prompts.py  tool_definitions.py
backend/src/lean_ai/scaffolds/ansible/: scaffold.yaml
backend/src/lean_ai/scaffolds/c/: scaffold.yaml
backend/src/lean_ai/scaffolds/cpp/: scaffold.yaml
backend/src/lean_ai/scaffolds/csharp/: scaffold.yaml
backend/src/lean_ai/scaffolds/go/: scaffold.yaml
backend/src/lean_ai/scaffolds/java-spring/: scaffold.yaml
backend/src/lean_ai/tools/: __init__.py  command_safety.py  executor.py  file_ops.py  git_ops.py  internet.py  scaffold.py  scratchpad.py  shell.py
backend/src/lean_ai/workflow/: __init__.py  pipeline.py  ws_handler.py
backend/tests/unit/: test_client.py  test_context_expansion.py  test_deprecations.py  test_extractor.py  test_metadata.py  test_registry.py  test_scratchpad.py
extension/: .vscodeignore  (+1 more)
(+28 files in other folders)
